Add Examples : Slider

--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -18,58 +18,45 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <!-- <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span> -->
+    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
   <div class="doc-desc-2">
-    Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
-    ends of the bar that reflect a range of values. </div>
+    Discrete sliders display a numeric value label upon pressing the thumb, which allows a user to input an exact value.</div>
   <div class="doc-example-container">
     <div app-docs-example="slider-basic"></div>
   </div>
 
-  <!-- <div class="doc-desc-2">
-    Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
-    ends of the bar that reflect a range of values. </div>
-  <div class="doc-example-container">
-    <div app-docs-example="slider-range"></div>
-  </div> -->
 
-
-  <!-- <div id="exampleWrapper">
+  <div id="exampleWrapper">
     <div class="doc-desc-2">
-      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
-      ends of the bar that reflect a range of values. </div>
+      Discrete sliders can be locked up with icons on both ends of the bar that reflect a range of values.</div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-basic-icon"></div>
+    </div>
+    <div class="doc-desc-2">
+      Use continuous sliders allow users to make meaningful selections that don’t require a specific value.</div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-continue"></div>
+    </div>
+    <div class="doc-desc-2">
+      Continuous sliders can be locked up with icons on both ends of the bar that reflect a range of values.</div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-continue-icon"></div>
+    </div>
+    <div class="doc-desc-2">
+      Use range slider to select two values between minimum and maximum values at once.</div>
     <div class="doc-example-container">
       <div app-docs-example="slider-range"></div>
     </div>
     <div class="doc-desc-2">
-      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
-      ends of the bar that reflect a range of values. </div>
+      Range slider can be locked up with icons on both ends of the bar that reflect a range of values.</div>
     <div class="doc-example-container">
-      <div app-docs-example="slider-basic"></div>
+      <div app-docs-example="slider-range-icon"></div>
     </div>
-    <div class="doc-desc-2">
-      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
-      ends of the bar that reflect a range of values. </div>
-    <div class="doc-example-container">
-      <div app-docs-example="slider-basic"></div>
-    </div>
-    <div class="doc-desc-2">
-      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
-      ends of the bar that reflect a range of values. </div>
-    <div class="doc-example-container">
-      <div app-docs-example="slider-basic"></div>
-    </div>
-    <div class="doc-desc-2">
-      Sliders reflect a range of values along a bar, from which users may select a single value. Sliders can have icons on both
-      ends of the bar that reflect a range of values. </div>
-    <div class="doc-example-container">
-      <div app-docs-example="slider-basic"></div>
-    </div>
-  </div> -->
+  </div>
 
 
   <div class="doc-divider">
