--- a/src/document.scss
+++ b/src/document.scss
@@ -42,8 +42,8 @@ a {
   color: #28292b;
   letter-spacing: 0;
   margin-bottom: 16px;
-  height: 34px;
-  line-height:34px;
+  // height: 34px;
+  // line-height:34px;
 }
 .doc-desc-2 {
   /* Use in forms to togg: */
@@ -68,7 +68,7 @@ a {
   background: #ffffff;
   // border: 1px solid #efefef;
   // height: 280px;
-  margin-bottom: 32px;
+  // margin-bottom: 32px;
 }
 .doc-props-table {
   width: 100%;
@@ -277,4 +277,7 @@ a {
   text-align: left;
   line-height: 18px;
   margin-left: 24px;
+}
+#exampleWrapper {
+  display:none
 }
