Add More Examples. Trello Ticket

--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -33,11 +33,19 @@
   </div>
 
   <div id="exampleWrapper">
+
     <div class="doc-desc-2">
       Use in forms to let user enter a date range.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="date-picker-basic"></div>
+    </div>
+
+    <div class="doc-desc-2">
+      Datepicker input and change events
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="date-picker-event"></div>
     </div>
   </div>
 
