--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -32,6 +32,11 @@
 
   <div id="exampleWrapper">
     <div class="doc-desc-2">
+      Discrete sliders can get value by change event</div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-event"></div>
+    </div>
+    <div class="doc-desc-2">
       Discrete sliders can be locked up with icons on both ends of the bar that reflect a range of values.</div>
     <div class="doc-example-container">
       <div app-docs-example="slider-basic-icon"></div>
@@ -50,6 +55,11 @@
       Use range slider to select two values between minimum and maximum values at once.</div>
     <div class="doc-example-container">
       <div app-docs-example="slider-range"></div>
+    </div>
+    <div class="doc-desc-2">
+      Range sliders can get range value from change event</div>
+    <div class="doc-example-container">
+      <div app-docs-example="slider-range-event"></div>
     </div>
     <div class="doc-desc-2">
       Range slider can be locked up with icons on both ends of the bar that reflect a range of values.</div>
