--- a/src/document.scss
+++ b/src/document.scss
@@ -68,7 +68,7 @@ a {
   background: #ffffff;
   // border: 1px solid #efefef;
   // height: 280px;
-  // margin-bottom: 32px;
+  margin-bottom: 32px;
 }
 .doc-props-table {
   width: 100%;
