Update Link up Modules

--- a/src/assets/documents/components/developers.html
+++ b/src/assets/documents/components/developers.html
@@ -74,7 +74,6 @@
       VizFormFieldModule,
       VizTreeModule,
       VizSliderModule,
-      VizExpansionModule,
       VizToolbarModule,
       VizIconModule,
       VizListModule,
@@ -88,7 +87,12 @@
       VizSidenavModule,
       VizProgressSpinnerModule,
       VizTableModule,
-      VizSteppersModule
+      VizSteppersModule,
+      VizBottomSheetModue,
+      VizBreadcrumbModule,
+      VizSearchModule,
+      VizChartModule,
+      VizRangeSliderModule
     } <span class="hljs-keyword">from</span> <span class="hljs-string">'viz-toolkit'</span>;
     <span class="hljs-meta">@NgModule</span>({
       ...
@@ -103,7 +107,6 @@
         VizFormFieldModule,
         VizTreeModule,
         VizSliderModule,
-        VizExpansionModule,
         VizToolbarModule,
         VizIconModule,
         VizListModule,
@@ -117,7 +120,12 @@
         VizSidenavModule,
         VizProgressSpinnerModule,
         VizTableModule,
-        VizSteppersModule
+        VizSteppersModule,
+        VizBottomSheetModue,
+        VizBreadcrumbModule,
+        VizSearchModule,
+        VizChartModule,
+        VizRangeSliderModule
       ],
       ...
     })
@@ -173,3 +181,4 @@
 </body>
 
 </html>
+
