--- a/libs/style.css
+++ b/libs/style.css
@@ -3075,17 +3075,21 @@ td.mat-cell,
 .mat-sort-header-arrow {
   margin-left: 4px !important; }
 
-.cdk-overlay-pane .mat-menu-panel .mat-menu-content {
-  max-width: none;
-  width: 280px;
-  padding: 0px; }
-  .cdk-overlay-pane .mat-menu-panel .mat-menu-content .mat-menu-item {
-    color: #696969;
-    font-weight: 300; }
-    .cdk-overlay-pane .mat-menu-panel .mat-menu-content .mat-menu-item:hover {
-      color: #8667bd; }
-  .cdk-overlay-pane .mat-menu-panel .mat-menu-content .mat-menu-item-submenu-trigger:hover::after {
-    color: white; }
+.cdk-overlay-pane {
+  transform: translateY(0) !important; }
+  .cdk-overlay-pane .mat-menu-panel {
+    border-radius: 0px; }
+    .cdk-overlay-pane .mat-menu-panel .mat-menu-content {
+      max-width: none;
+      width: 280px;
+      padding: 0px; }
+      .cdk-overlay-pane .mat-menu-panel .mat-menu-content .mat-menu-item {
+        color: #696969;
+        font-weight: 300; }
+        .cdk-overlay-pane .mat-menu-panel .mat-menu-content .mat-menu-item:hover {
+          color: #8667bd; }
+      .cdk-overlay-pane .mat-menu-panel .mat-menu-content .mat-menu-item-submenu-trigger:hover::after {
+        color: white; }
 
 .mat-list .mat-list-item .mat-list-item-content {
   color: #696969;
@@ -3115,6 +3119,13 @@ td.mat-cell,
 .mat-selection-list .mat-list-option.mat-list-item-focus {
   background-color: rgba(127, 94, 186, 0.12); }
 
+.mat-divider {
+  border-top-color: rgba(215, 221, 229, 0.5) !important; }
+
+.vizient-snackbar.mat-snack-bar-container {
+  padding-left: 16px;
+  padding-right: 8px; }
+
 @media screen and (max-width: 375px) {
   .vizient-snackbar .mat-simple-snackbar {
     flex-direction: column; }
@@ -3122,16 +3133,62 @@ td.mat-cell,
     align-self: flex-end;
     margin-top: 16px; } }
 
+.cdk-overlay-pane .mat-snack-bar-container {
+  border-radius: 0px; }
+
+.viz-snackbar-mobile {
+  width: 343px !important; }
+  .viz-snackbar-mobile .mat-simple-snackbar {
+    flex-direction: column; }
+    .viz-snackbar-mobile .mat-simple-snackbar span {
+      width: 255px; }
+    .viz-snackbar-mobile .mat-simple-snackbar .mat-simple-snackbar-action {
+      margin-left: 249px; }
+      .viz-snackbar-mobile .mat-simple-snackbar .mat-simple-snackbar-action .mat-button {
+        min-width: auto;
+        width: fit-content;
+        padding: 0 8px; }
+
+.viz-snackbar-desktop {
+  width: 463px !important; }
+
 .mat-radio-label-content {
   font-size: 14px; }
+
+.viz-button-left-icon {
+  display: inline-flex;
+  align-items: center; }
+  .viz-button-left-icon .mat-icon {
+    font-size: 18px;
+    height: 18px;
+    width: 18px;
+    margin-right: 8px; }
+
+.viz-button-right-icon {
+  display: inline-flex;
+  align-items: center; }
+  .viz-button-right-icon .mat-icon {
+    font-size: 18px;
+    height: 18px;
+    width: 18px;
+    margin-left: 8px; }
 
 .mat-checkbox-label {
   font-size: 14px; }
 
+.mat-checkbox-frame {
+  border-color: #9f9f9f !important; }
+
+.mat-form-field-infix textarea {
+  color: #000000; }
+
 .mat-form-field.mat-focused .mat-form-field-suffix .mat-icon {
   color: #000000; }
 
-.mat-form-field .mat-input-element {
+.mat-form-field.mat-focused .mat-hint {
+  color: #7f5eba; }
+
+.mat-form-field input.mat-input-element {
   height: 24px;
   line-height: 24px;
   vertical-align: middle;
@@ -3186,14 +3243,26 @@ td.mat-cell,
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12) !important; }
 
 .cdk-overlay-pane .mat-dialog-container {
-  padding: 0px; }
+  padding: 0px;
+  border-radius: 0px; }
+
+.viz-text-badge {
+  display: inline-flex;
+  align-items: baseline; }
+  .viz-text-badge span {
+    position: relative;
+    top: 0px !important;
+    right: 0px !important;
+    margin-left: 4px;
+    font-weight: 500; }
 
 .mat-badge-content {
   width: max-content !important;
   border-radius: 12px !important;
   height: 24px !important;
   line-height: 24px !important;
-  padding: 0 9px; }
+  padding: 0 5px;
+  min-width: 15px; }
 
 .mat-badge-medium.mat-badge-overlap.mat-badge-after .mat-badge-content {
   right: auto;
@@ -3241,18 +3310,39 @@ td.mat-cell,
   width: auto;
   max-width: none; }
 
+.viz-icon-small {
+  font-size: 18px; }
+
+.viz-icon-big {
+  font-size: 32px;
+  height: 32px;
+  width: 32px; }
+
+mat-chip {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0); }
+
 .mat-paginator {
   line-height: 24px; }
   .mat-paginator .mat-paginator-container {
     min-height: none; }
   .mat-paginator .mat-paginator-page-size-label {
     margin-left: 0px;
-    margin-right: 24px; }
+    margin-right: 24px;
+    font-size: 13px; }
   .mat-paginator .mat-paginator-page-size-select {
     margin-left: 0px;
     margin-right: 0px; }
+    .mat-paginator .mat-paginator-page-size-select .mat-select-value-text {
+      font-size: 14px;
+      color: #000000; }
+    .mat-paginator .mat-paginator-page-size-select .mat-select-arrow {
+      color: #9f9f9f !important; }
   .mat-paginator .mat-paginator-range-label {
-    margin-left: 32px; }
+    margin-left: 32px;
+    font-size: 13px; }
   .mat-paginator .mat-form-field-underline {
     display: none; }
   .mat-paginator .mat-paginator-range-actions .mat-icon-button {
@@ -3279,11 +3369,14 @@ td.mat-cell,
     padding: 16px;
     /* Available Contracts: */
     font-family: Soleto;
+    height: 48px;
+    box-sizing: border-box;
     font-size: 10px;
     color: #9f9f9f;
-    letter-spacing: 1.5px;
     line-height: 15px;
     font-weight: 700; }
+    .viz-table-head .mat-sort-header-button {
+      letter-spacing: 1.5px; }
     .viz-table-head .mat-sort-header-sorted {
       color: #212121; }
       .viz-table-head .mat-sort-header-sorted .mat-sort-header-arrow {
@@ -3291,7 +3384,7 @@ td.mat-cell,
     .viz-table-head:first-child {
       padding-left: 40px; }
     .viz-table-head:last-child {
-      padding-right: 20px; }
+      padding-right: 24px; }
   .viz-table-row {
     width: 100%;
     overflow: hidden;
@@ -3315,7 +3408,7 @@ td.mat-cell,
     .viz-table-cell:first-child {
       padding-left: 40px; }
     .viz-table-cell:last-child {
-      padding-right: 20px; }
+      padding-right: 24px; }
   .viz-table-expand-row {
     /* Rectangle 3 Copy 2: */
     background: #fafafa;
@@ -3324,6 +3417,10 @@ td.mat-cell,
       box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.07), inset 0 1px 0 0 rgba(215, 221, 229, 0.5); }
     .viz-table-expand-row:last-child {
       box-shadow: inset 0 1px 0 0 rgba(215, 221, 229, 0.5), inset 0 -1px 2px 0 rgba(0, 0, 0, 0.05); }
+
+mat-datepicker-content.mat-datepicker-content {
+  height: auto !important;
+  width: auto; }
 
 .mat-toolbar.mat-toolbar-single-row {
   padding: 0px 24px; }
@@ -3384,7 +3481,7 @@ td.mat-cell,
         display: block !important; }
     .viz-sidenav-group-item.active {
       color: #7f5eba;
-      background-color: rgba(127, 94, 186, 0.08);
+      background-color: rgba(127, 94, 186, 0.16);
       border-radius: 2px; }
       .viz-sidenav-group-item.active .mat-icon {
         color: #7f5eba; }
