--- a/src/document.scss
+++ b/src/document.scss
@@ -1,3 +1,4 @@
+@import '../libs/_viz-color.scss';
 a {
   text-decoration: none;
 }
@@ -62,6 +63,16 @@ a {
 }
 .doc-desc-2-highlight-text {
   color: #ff4e00;
+}
+.doc-title-3 {
+  /* Headlines: */
+  font-weight: 300;
+  font-size: 18px;
+  color: #000000;
+  text-align: left;
+  line-height: 30px;
+  height: 30px;
+  margin-bottom: 8px;
 }
 .doc-example-container {
   /* Rectangle 3: */
@@ -239,6 +250,9 @@ a {
 .docs-mt32 {
   margin-top: 32px;
 }
+.docs-mb32 {
+  margin-bottom: 32px;
+}
 .docs-mt24 {
   margin-top: 24px;
 }
@@ -279,5 +293,163 @@ a {
   margin-left: 24px;
 }
 #exampleWrapper {
-  display:none
+  display: none;
+}
+.doc-fl {
+  float: left;
+}
+.doc-color-container {
+  display: inline-block;
+  width: 350px;
+  font-size: 16px;
+  color: #000000;
+  font-weight: 300;
+}
+
+.doc-color-block {
+  height: 50px;
+  position: relative;
+  padding: 13px 24px;
+  box-sizing: border-box;
+}
+.doc-color-border-top {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  overflow: hidden;
+  border-radius: 5px 5px 0 0;
+}
+.doc-color-border-bottom {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  overflow: hidden;
+  border-radius: 0 0 5px 5px;
+}
+.doc-color-primary {
+  position: relative;
+  height: 60px;
+  padding: 18px 24px;
+  box-sizing: border-box;
+}
+.doc-color-text-color-black {
+  color: #000000;
+}
+.doc-color-text-color-white {
+  color: #ffffff;
+}
+.doc-color-level1 {
+  opacity: 0.04;
+}
+.doc-color-level2 {
+  opacity: 0.12;
+}
+.doc-color-level3 {
+  opacity: 0.16;
+}
+.doc-color-name {
+  text-align: left;
+  line-height: 24px;
+}
+.doc-color-opacity {
+  float: right;
+  text-align: right;
+  line-height: 24px;
+}
+.doc-color-background {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+}
+.doc-color-purple {
+  background-color: $viz-purple;
+}
+.doc-color-orange {
+  background-color: $viz-orange;
+}
+.doc-color {
+  &-blue {
+    background-color: $viz-blue;
+  }
+  &-yellow {
+    background-color: $viz-yellow;
+  }
+  &-green {
+    background-color: $viz-green;
+  }
+  &-gray {
+    background-color: $viz-gray;
+  }
+  &-black {
+    background-color: $viz-black;
+  }
+  &-chart-teal {
+    background-color: $chart-teal;
+  }
+  &-chart-purple {
+    background-color: $chart-purple;
+  }
+  &-chart-orange {
+    background-color: $chart-orange;
+  }
+  &-chart-blue {
+    background-color: $chart-blue;
+  }
+  &-chart-green {
+    background-color: $chart-green;
+  }
+  &-chart-pink {
+    background-color: $chart-pink;
+  }
+  &-chart-yellow {
+    background-color: $chart-yellow;
+  }
+  &-chart-red {
+    background-color: $chart-red;
+  }
+  &-dark-gray {
+    background-color: $viz-dark-gray;
+  }
+  &-light-gray {
+    background-color: $viz-light-gray;
+  }
+  &-extra-light-gray {
+    background-color: $viz-extra-light-gray;
+  }
+  &-gray-special-1 {
+    background-color: #f1f1f1;
+  }
+  &-gray-special-2 {
+    background-color: #fafafa;
+  }
+}
+.doc-color-strip-wrapper {
+}
+.doc-color-strip {
+  border-radius: 5px;
+  height: 60px;
+  padding: 18px 24px;
+  width: 350px;
+  display: inline-block;
+  box-sizing: border-box;
+
+  &:nth-child(2n) {
+    margin-left: 24px;
+    vertical-align: top;
+  }
+  span {
+    font-size: 16px;
+    line-height: 24px;
+    text-align: left;
+    font-weight: 300;
+    &:nth-child(2) {
+      text-align: right;
+      float: right;
+    }
+  }
 }
