--- a/libs/components/header/viz-header.component.scss
+++ b/libs/components/header/viz-header.component.scss
@@ -7,6 +7,7 @@
     z-index: 10;
     box-shadow: 0 1px 0 0 #e9e9e9;
     padding: 0 15px;
+    position: relative;
 
     .navbar-wrapper {
       display: flex;
