--- a/libs/components/footer/viz-footer.component.scss
+++ b/libs/components/footer/viz-footer.component.scss
@@ -28,7 +28,8 @@
     p {
       padding: 0;
       margin: 0;
-      line-height: 24px
+      line-height: 20px;
+      font-size: 14px;
     }
   }
 
