--- a/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/src/app/pages/component-sidenav/component-sidenav.scss
@@ -11,7 +11,8 @@
     // height: 100%;
     // min-height: $contentHeight;
     // height: $contentHeight;
-    height: 75vh;
+    // height: 75vh;
+    height: calc(100vh - 72px);
     box-shadow: 1px 0 0 0 #e9e9e9;
     box-sizing: border-box;
     overflow-y: auto;
