Fix Bug : Datepicker --> please remove "or a date range"

--- a/src/assets/documents/components/datepicker.html
+++ b/src/assets/documents/components/datepicker.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Use in forms to allow the user to enter a date or date range.
+    Use in forms to allow the user to enter a date.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="date-picker-single"></div>
