Fix Bug : Slider: all sliders --> Knob size should always be 12x12px (don't make it bigger when dragging)

--- a/libs/style.scss
+++ b/libs/style.scss
@@ -815,6 +815,17 @@ mat-datepicker-content.mat-datepicker-content {
   }
 }
 
+//slider
+.mat-slider {
+  .mat-slider-thumb {
+    transform: scale(0.6) !important
+  }
+}
+
+.cdk-mouse-focused{
+  
+}
+
 //Typography: Styles
 .viz-h1 {
   /* Headline H1: */
