Fix Bug : Tree --> space between icon and text should be 8px. please reference link Fix Bug : Tree --> space between accordion and checkbox should be 8px. please reference link

--- a/libs/components/tree/viz-tree.component.scss
+++ b/libs/components/tree/viz-tree.component.scss
@@ -26,6 +26,7 @@
       &.mat-icon {
         @include md-icon-size(24px);
         color: #9f9f9f;
+        margin-right: 8px;
       }
       &.mat-checkbox-frame {
         border-color: #9f9f9f;
