--- a/src/assets/examples/dialog-basic/dialog-contain.component.html
+++ b/src/assets/examples/dialog-basic/dialog-contain.component.html
@@ -38,7 +38,7 @@
 
 
   <div class="modal-footer">
-    <button mat-button color="primary">Cancel</button>
-    <button mat-flat-button color="primary" class="modal-addbtn">Add</button>
+    <button mat-button color="primary" (click)="onNoClick()">Cancel</button>
+    <button mat-flat-button color="primary" class="modal-addbtn" (click)="onNoClick()">Add</button>
   </div>
 </div>
