Fix Bug :  168, 169 dropdown row height should be 40px - font size should be 14px dropdown's number should lie exactly over the paginator number. please see reference link

--- a/src/assets/examples/menu-nested/menu-nested.component.html
+++ b/src/assets/examples/menu-nested/menu-nested.component.html
@@ -1,34 +1,34 @@
 <button mat-button [matMenuTriggerFor]="start">Menu Start</button>
 
-<mat-menu #start="matMenu">
+<mat-menu #start="matMenu" backdropClass="viz-menu">
   <button mat-menu-item [matMenuTriggerFor]="content1">Content 1</button>
   <button mat-menu-item [matMenuTriggerFor]="content2">Content 2</button>
   <button mat-menu-item [matMenuTriggerFor]="content3">Content 3</button>
   <button mat-menu-item [matMenuTriggerFor]="content4">Content 4</button>
 </mat-menu>
 
-<mat-menu #content1="matMenu">
+<mat-menu #content1="matMenu" backdropClass="viz-menu">
   <button mat-menu-item>Content 1.1</button>
   <button mat-menu-item>Content 1.2</button>
   <button mat-menu-item>Content 1.3</button>
   <button mat-menu-item>Content 1.4</button>
 </mat-menu>
 
-<mat-menu #content2="matMenu">
+<mat-menu #content2="matMenu" backdropClass="viz-menu">
   <button mat-menu-item>Content 2.1</button>
   <button mat-menu-item>Content 2.2</button>
   <button mat-menu-item>Content 2.3</button>
   <button mat-menu-item>Content 2.4</button>
 </mat-menu>
 
-<mat-menu #content3="matMenu">
+<mat-menu #content3="matMenu" backdropClass="viz-menu">
   <button mat-menu-item>Content 3.1</button>
   <button mat-menu-item>Content 3.2</button>
   <button mat-menu-item>Content 3.3</button>
   <button mat-menu-item>Content 3.4</button>
 </mat-menu>
 
-<mat-menu #content4="matMenu">
+<mat-menu #content4="matMenu" backdropClass="viz-menu">
   <button mat-menu-item>Content 4.1</button>
   <button mat-menu-item>Content 4.2</button>
   <button mat-menu-item>Content 4.3</button>
