--- a/libs/style.scss
+++ b/libs/style.scss
@@ -226,7 +226,7 @@ td.mat-cell,
 // }
 // menu style
 .cdk-overlay-pane {
-  transform: translateY(0) !important;
+  // transform: translateY(0) !important;
   .mat-menu-panel {
     border-radius: 0px;
     .mat-menu-content {
@@ -246,6 +246,12 @@ td.mat-cell,
         }
       }
     }
+  }
+}
+
+.viz-menu ~ .cdk-overlay-connected-position-bounding-box  {
+  .cdk-overlay-pane {
+    transform: translateY(0) !important
   }
 }
 //list style
@@ -587,49 +593,62 @@ mat-chip {
 }
 
 //paginator
-.mat-paginator {
-  line-height: 24px;
-  .mat-paginator-container {
-    min-height: none;
-  }
-  .mat-paginator-page-size-label {
-    margin-left: 0px;
-    margin-right: 24px;
-    font-size: 13px;
-  }
-  .mat-paginator-page-size-select {
-    margin-left: 0px;
-    margin-right: 0px;
-    .mat-select-value-text {
-      font-size: 14px;
-      color: #000000;
-    }
-    .mat-select-arrow {
-      color: #9f9f9f !important;
-    }
-  }
-  .mat-paginator-range-label {
-    margin-left: 32px;
-    font-size: 13px;
-  }
-  .mat-form-field-underline {
-    display: none;
-  }
-  .mat-paginator-range-actions {
-    .mat-icon-button {
-      line-height: 24px;
-      height: 24px;
-      width: 24px;
-      margin-top: -3px;
-      .mat-paginator-icon {
-        width: 24px;
+// .mat-paginator {
+//   line-height: 24px;
+//   .mat-paginator-container {
+//     min-height: none;
+//   }
+//   .mat-paginator-page-size-label {
+//     margin-left: 0px;
+//     margin-right: 24px;
+//     font-size: 13px;
+//   }
+//   .mat-paginator-page-size-select {
+//     margin-left: 0px;
+//     margin-right: 0px;
+//     .mat-select-value-text {
+//       font-size: 14px;
+//       color: #000000;
+//     }
+//     .mat-select-arrow {
+//       color: #9f9f9f !important;
+//     }
+//   }
+//   .mat-paginator-range-label {
+//     margin-left: 32px;
+//     font-size: 13px;
+//   }
+//   .mat-form-field-underline {
+//     display: none;
+//   }
+//   .mat-paginator-range-actions {
+//     .mat-icon-button {
+//       line-height: 24px;
+//       height: 24px;
+//       width: 24px;
+//       margin-top: -3px;
+//       .mat-paginator-icon {
+//         width: 24px;
+//       }
+//     }
+//   }
+//   .mat-paginator-navigation-next {
+//     margin-left: 24px;
+//   }
+// }
+
+div[ng-reflect-klass="mat-select-panel mat-primary"] {
+  .mat-select-content {
+    .mat-option {
+      height: 40px;
+      line-height: 40px;
+      .mat-option-text {
+        font-size: 14px;
       }
     }
   }
-  .mat-paginator-navigation-next {
-    margin-left: 24px;
-  }
 }
+
 
 //table
 .viz-table {
