--- a/src/assets/examples/menu-basic/menu-basic.component.html
+++ b/src/assets/examples/menu-basic/menu-basic.component.html
@@ -1,6 +1,6 @@
 <button mat-button [matMenuTriggerFor]="start">Menu Start</button>
 
-<mat-menu #start="matMenu">
+<mat-menu #start="matMenu" backdropClass="viz-menu">
   <button mat-menu-item>Content 1</button>
   <button mat-menu-item>Content 2</button>
   <button mat-menu-item>Content 3</button>
