Fix Bug : 162 Sidenav --> "- when click on a different item, that item should be selected instead of being taken to another page - should be able to close a item when click on 'X'"

--- a/src/assets/examples/sidenav-basic/sidenav-basic.component.html
+++ b/src/assets/examples/sidenav-basic/sidenav-basic.component.html
@@ -3,7 +3,7 @@
     <div class="viz-sidenav-header">
       Activity Overview
     </div>
-    <div class="viz-sidenav-group" *ngFor="let nav of navList; let i=index">
+    <div class="viz-sidenav-group" *ngFor="let nav of navList; let navIndex=index">
       <div class="viz-sidenav-group-header">
         {{nav.name}}
       </div>
@@ -13,7 +13,7 @@
         #rla="routerLinkActive" [class.active]="rla.isActive">
         <mat-icon class="viz-sidenav-group-item-icon">{{subNav.icon}}</mat-icon>
         {{subNav.name}}
-        <mat-icon class="viz-sidenav-group-item-icon-close">close</mat-icon>
+        <mat-icon *ngIf="subNav.removable" class="viz-sidenav-group-item-icon-close" (click)="removeItem(navIndex, subNav);$event.stopPropagation();">close</mat-icon>
       </div>
     </div>
   </div>
