--- a/src/assets/documents/components/slider.html
+++ b/src/assets/documents/components/slider.html
@@ -31,11 +31,11 @@
 
 
   <div id="exampleWrapper">
-    <div class="doc-desc-2">
+    <!-- <div class="doc-desc-2">
       Discrete sliders can get value by change event</div>
     <div class="doc-example-container">
       <div app-docs-example="slider-event"></div>
-    </div>
+    </div> -->
     <div class="doc-desc-2">
       Discrete sliders can be locked up with icons on both ends of the bar that reflect a range of values.</div>
     <div class="doc-example-container">
