--- a/src/assets/examples/slider-basic-icon/slider-basic-icon.component.html
+++ b/src/assets/examples/slider-basic-icon/slider-basic-icon.component.html
@@ -4,7 +4,11 @@
             remove_red_eye
         </mat-icon>
     </span>
-    <mat-slider min="0" max="200" step="20" value="50"></mat-slider>
+    <viz-slider min="0"
+                max="200"
+                value="120"
+                tickInterval="40"
+                thumbLabel></viz-slider>
     <span>
         <mat-icon>
             remove_red_eye
