--- a/src/assets/examples/slider-continue/slider-continue.component.html
+++ b/src/assets/examples/slider-continue/slider-continue.component.html
@@ -1,1 +1,5 @@
-<mat-slider min="0" max="200" step="0.1" value="50"></mat-slider>
+<div class="example-wrapper">
+    <viz-slider min="0"
+                max="200"
+                value="120"></viz-slider>
+</div>
