--- a/src/assets/examples/slider-range-icon/slider-range-icon.component.html
+++ b/src/assets/examples/slider-range-icon/slider-range-icon.component.html
@@ -4,7 +4,14 @@
             remove_red_eye
         </mat-icon>
     </span>
-    <viz-range-slider min="0" max="400" step="0.1" value="50" lowerValue="100" upperValue="300"></viz-range-slider>
+    <div class="example-wrapper">
+        <viz-slider min="0"
+                    max="200"
+                    lowerValue="50"
+                    upperValue="150"
+                    range
+                    thumbLabel></viz-slider>
+    </div>
     <span>
         <mat-icon>
             remove_red_eye
