--- a/src/assets/examples/slider-range/slider-range.component.html
+++ b/src/assets/examples/slider-range/slider-range.component.html
@@ -1,3 +1,7 @@
 <div class="example-wrapper">
-    <viz-range-slider min="0" max="400" step="0.1" value="50" lowerValue="100" upperValue="300"></viz-range-slider>
+    <viz-slider min="0"
+                max="200"
+                lowerValue="50"
+                upperValue="150"
+                range></viz-slider>
 </div>
