--- a/src/document.scss
+++ b/src/document.scss
@@ -174,6 +174,14 @@ a {
     transform: scale(0.5);
   }
 }
+.docs-usage-center {
+  position: relative;
+  & > * {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%)
+  }
+}
 .docs-usage-spec {
   position: relative;
   width: 100%;
@@ -293,7 +301,7 @@ a {
   margin-left: 24px;
 }
 #exampleWrapper {
-  display: none;
+  display: block;
 }
 .doc-fl {
   float: left;
