--- a/src/assets/documents/components/tabs.html
+++ b/src/assets/documents/components/tabs.html
@@ -5,7 +5,8 @@
 <body>
   <div class="doc-category-title ">
     Layout
-    <span class="docs-markdown-h3" id="contents">
+    <span class="docs-markdown-h3"
+          id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -19,8 +20,10 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
-    <span class="docs-markdown-h3" id="examples">
+    <span class="docs-more-example"
+          doc-viewer-extend="exampleWrapper"></span>
+    <span class="docs-markdown-h3"
+          id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
@@ -44,7 +47,8 @@
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3" id="props">
+    <span class="docs-markdown-h3"
+          id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -121,7 +125,8 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3" id="best_practices">
+    <span class="docs-markdown-h3"
+          id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
@@ -144,7 +149,8 @@
 
   <div class="doc-title-2">
     Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3" id="content_guidelines">
+    <span class="docs-markdown-h3"
+          id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
@@ -153,24 +159,32 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:282px">
-      <img src="assets/img/doc/tabs-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center"
+         style="height:282px">
+      <img src="assets/img/doc/tabs-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:282px">
-      <img src="assets/img/doc/tabs-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
+         style="height:282px">
+      <img src="assets/img/doc/tabs-dont.png"
+           alt="">
     </div>
   </div>
 
   <div class="doc-desc-2">
-    Don’t use simple tabs within a wide column, even when there are just a few items.
+    If there is not enough space for tabs within a narrow column, don’t wrap or resize text, make the tabs scrollable instead.
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:282px">
-      <img src="assets/img/doc/tabs-scroll-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center"
+         style="height:282px">
+      <img src="assets/img/doc/tabs-scroll-do.png"
+           alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:282px">
-      <img src="assets/img/doc/tabs-scroll-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
+         style="height:282px">
+      <img src="assets/img/doc/tabs-scroll-dont.png"
+           alt="">
     </div>
   </div>
 
@@ -182,19 +196,23 @@
 
   <div class="doc-title-2">
     Design Specs
-    <span class="docs-markdown-h3" id="design_specs">
+    <span class="docs-markdown-h3"
+          id="design_specs">
       <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center" style="height:346px">
-    <img src="assets/img/doc/tabs-spec.png" alt="">
+  <div class="docs-usage-spec docs-usage-center"
+       style="height:346px">
+    <img src="assets/img/doc/tabs-spec.png"
+         alt="">
   </div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
-    <span class="docs-markdown-h3" id="component_location_for_designers">
+    <span class="docs-markdown-h3"
+          id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
   <div class="doc-desc-2">
