--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -100,7 +100,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Start with a capital letter
+    Don’t place imagery in tree that makes the content hard to scan.
   </div>
 
   <div class="docs-guideline-group">
