--- a/libs/style.scss
+++ b/libs/style.scss
@@ -591,7 +591,10 @@ mat-chip {
   -webkit-transform: translate3d(0, 0, 0);
   -moz-transform: translate3d(0, 0, 0);
 }
-
+.mat-chip-remove {
+  opacity: 1 !important;
+  color: #000000 !important;
+}
 //paginator
 // .mat-paginator {
 //   line-height: 24px;
