--- a/src/assets/documents/components/icon.html
+++ b/src/assets/documents/components/icon.html
@@ -25,7 +25,7 @@
   </div>
 
   <div class="doc-desc-2">
-    For web projects, the best format is icon web font.
+    For web projects, the best format is icon web font. Default font size is 24x24 px.
   </div>
   <div class="doc-example-container">
     <div app-docs-example="icon-basic"></div>
@@ -33,13 +33,13 @@
 
   <div id="exampleWrapper">
     <div class="doc-desc-2">
-      For web projects, the best format is icon web font.
+      Smaller font size 18x18 px is often used for table, exansion panel, snackbar icons.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="icon-small"></div>
     </div>
     <div class="doc-desc-2">
-      For web projects, the best format is icon web font.
+      Biggest font size is 32x32 px.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="icon-big"></div>
