--- a/src/assets/documents/components/bottomsheet.html
+++ b/src/assets/documents/components/bottomsheet.html
@@ -9,7 +9,7 @@
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
-    Bottom sheet
+    Bottom Sheet
   </div>
   <div class="doc-desc-1">
     Bottom sheets are surfaces containing supplementary content that are anchored to the bottom of the screen. Bottom sheets
@@ -24,7 +24,7 @@
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
-    Bottom sheets are are intended primarily as an interaction on mobile devices where they can be used as an alternative to
+    Bottom sheets are intended primarily as an interaction on mobile devices where they can be used as an alternative to
     dialogs and menus.
   </div>
   <div class="doc-example-container">
