--- a/src/assets/documents/components/designers.html
+++ b/src/assets/documents/components/designers.html
@@ -54,18 +54,18 @@
   </div>
 
   <div class="doc-bold-title">
-    Recieving library updates
+    Receiving library updates
   </div>
 
   <div class="doc-desc-2">
     <p>
-      To recieve updates to the Toolkit Material Library symbols make sure you periodically download the latest kits from the Vizient
-      styleguide. Once you update your local copy with the latest version you will automatically recieve symbol updates inside
+      To receive updates to the Toolkit Material Library symbols make sure you periodically download the latest kits from the Vizient
+      styleguide. Once you update your local copy with the latest version you will automatically receive symbol updates inside
       of Sketch.
     </p>
     <p>
       Updates are indicated by a badge that Sketch displays in the top right hand corner. You’ll be able to see all of the symbols
-      that have been updated and select which ones you want to recieve at any given time.
+      that have been updated and select which ones you want to receive at any given time.
     </p>
   </div>
 
