--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Expansion panels provides extra infomration in details-summary view of its header, that’s easy to scan, so that users can
+    Expansion panels provides extra information in details-summary view of its header, that’s easy to scan, so that users can
     look for patterns and insights.
   </div>
 
