--- a/src/assets/documents/components/expansionpanel.html
+++ b/src/assets/documents/components/expansionpanel.html
@@ -92,7 +92,7 @@
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
   <div class="doc-desc-2">
-    As for expanded rows, use grey background colof with top and bottom shadows to distinguish from main rows.
+    As for expanded rows, use grey background color with top and bottom shadows to distinguish from main rows.
   </div>
   <div class="docs-guideline-group">
     <div class="docs-usage-do">
