--- a/src/assets/documents/components/stepper.html
+++ b/src/assets/documents/components/stepper.html
@@ -66,7 +66,7 @@
   </div>
 
   <div class="doc-desc-2">
-    Stepper shoud:
+    Stepper should:
 
     <ul class="doc-list">
       <li>Stepper reflects the status of a process. They are never simply decorative.
