--- a/src/assets/documents/components/nodata.html
+++ b/src/assets/documents/components/nodata.html
@@ -11,7 +11,7 @@
   <div class="doc-title-1">
     No Data </div>
   <div class="doc-desc-1">
-    Help the user know when there is no data. Don't assume that they'll interpet a blank table or field as "no data". They might
+    Help the user know when there is no data. Don't assume that they'll interpret a blank table or field as "no data". They might
     think the application is broken.</div>
 
   <div class="doc-divider">
