--- a/src/assets/documents/components/button.html
+++ b/src/assets/documents/components/button.html
@@ -45,13 +45,13 @@
       <div app-docs-example="button-text"></div>
     </div>
     <div class="doc-desc-2">
-      Can be used when an action need to be emphasised.
+      Can be used when an action need to be emphasized.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="button-icon-left"></div>
     </div>
     <div class="doc-desc-2">
-      Can be used when an action need to be emphasised.
+      Can be used when an action need to be emphasized.
     </div>
     <div class="doc-example-container">
       <div app-docs-example="button-icon-right"></div>
